<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_login"
    android:padding="40dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_form"

        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="Welcome!"
            android:textColor="@color/texto"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Introduce your email."
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:typeface="monospace" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/introduce_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:typeface="normal"

            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_form"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:backgroundTint="#6f86d6"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_form"
            android:onClick="register"
            android:text="@string/register"
            android:textColor="@color/texto"
            android:textSize="12sp"
            android:textStyle="bold"
            app:backgroundTint="@color/white"
            tools:ignore="OnClick" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/texto" />

        <Button
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_form"
            android:drawableLeft="@mipmap/google_icon"
            android:onClick="signInWithGoogle"
            android:text="Sign in with Google"
            android:textColor="#7E7E7E"
            tools:ignore="OnClick" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="right"
            android:onClick="recoverPasswordActivity"
            android:text="Forgot your password?"
            android:textColor="@color/texto"
            android:textSize="10sp"
            android:textStyle="italic|bold"
            tools:ignore="OnClick" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>